# SPV-server

./: Cargo.toml  LICENSE  README.md  test.html
src/: config.rs  error.rs  main.rs
src/db/: hasura_client.rs  hasura_match_repository.rs  mod.rs  operations.rs
src/gateway/: handler.rs  mod.rs  state.rs
src/matchmaking/: service.rs
src/models/: game.rs  message.rs  mod.rs
static/: test.html
