[package]
name = "CaiTH-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时和WebSocket服务器, futures-tile用于处理 WebSocket 的读写流
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["ws"] }
futures-util = "0.3.30"

# 数据库
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

# 基础工具
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# 错误处理和日志
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

# .env
dotenv = "0.15.0"